--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "^0.104.0"
 uvicorn = {extras = ["standard"], version = "^0.23.2"}
+sqlalchemy = "^2.0.23"
+psycopg = "^3.1.12"
 
 
 [build-system]
